# limit-order-book-simulator

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
examples/: backtest_demo.py  demo.py  flow_demo.py  plot_demo.py  regime_comparison.py  simulation_demo.py
limit_order_book_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lob/: __init__.py  matching_engine.py  metrics.py  order.py  order_book.py  order_flow.py  plotting.py  position.py  price_level.py  simulation.py  strategy.py
tests/: test_matching_engine.py  test_metrics.py  test_order.py  test_order_book.py  test_order_flow.py  test_plotting.py  test_position.py  test_price_level.py  test_simulation.py  test_strategy.py
